修复部署失败问题